--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/sunflower.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor Challange| Social links profile</title>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <style>
+      footer {
+        font-size: 11px;
+        text-align: center;
+      }
+      footer a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <main>
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall" />
+        <h1 class="account-name">
+          Jessica Randall
+          <span class="account-address">London, United Kingdom</span>
+        </h1>
+        <p class="account-description">"Front-end developer and avidreader."</p>
+        <div class="social-list">
+          <button class="social-link">GitHub</button>
+          <button class="social-link">Frontend Mentor</button>
+          <button class="social-link">LinkedIn</button>
+          <button class="social-link">Twitter</button>
+          <button class="social-link">Instagram</button>
+        </div>
+      </main>
+      <footer class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/social-links-profile-UG32l9m6dQ"
+          target="_blank"
+          >Frontend Mentor</a
+        >.<br />
+        Coded by
+        <a href="https://github.com/VangmanawKairung">Kairung Vangmanaw</a>.
+      </footer>
+    </div>
+  </body>
 </html>
