--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         --button-bg: hsl(0, 0%, 20%);
         --font-family: "Inter", sans-serif;
         --font-size: 14px;
-        --font-weight-regular: 400;
+        --font-weight-thin: 400;
         --font-weight-medium: 600;
         --font-weight-bold: 700;
       }
@@ -58,16 +58,6 @@
         position: absolute;
       }
 
-      main {
-        width: 326px;
-        height: 580px;
-        background-color: var(--card-bg);
-
-        top: 50%;
-        left: 50%;
-        translate: -50% -50%;
-      }
-
       main,
       .social-list {
         display: flex;
@@ -76,10 +66,61 @@
         align-items: center;
       }
 
+      main {
+        top: 50%;
+        height: 580px;
+        width: 326px;
+        left: 50%;
+        translate: -50% -50%;
+
+        padding: 24px;
+        padding-bottom: 25px;
+        background-color: var(--card-bg);
+        line-height: 1;
+        border-radius: 15px;
+      }
+
+      img.account-image {
+        width: 89px;
+        height: auto;
+        border-radius: 50%;
+      }
+
+      h1 {
+        font-size: 1.78rem;
+        margin-top: 19px;
+      }
+
+      p.account-address {
+        font-size: 1.01rem;
+        color: var(--highlight-text-color);
+        margin-bottom: 20px;
+      }
+
+      p.account-description {
+        font-weight: var(--font-weight-thin);
+        margin-bottom: 15px;
+      }
+
+      .social-list {
+        width: 100%;
+        height: fit-content;
+        gap: 16px;
+      }
+
       button.social-link {
         width: 100%;
         height: 45px;
         background-color: var(--button-bg);
+        outline: none;
+        border: none;
+        border-radius: 7px;
+      }
+
+      button.social-link:hover {
+        color: var(--card-bg);
+        background-color: var(--highlight-text-color);
+        cursor: pointer;
       }
 
       footer,
@@ -104,19 +145,39 @@
         main {
           width: 384px;
           height: 612px;
+          padding: 40px;
         }
       }
     </style>
   </head>
   <body>
+    <!-- <img
+      src="./design/desktop-design.jpg"
+      alt="Design overlay"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        opacity: 0.5;
+        pointer-events: none;
+        z-index: 9999;
+      "
+    /> -->
     <div class="container">
       <main>
-        <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall" />
-        <h1 class="account-name">
-          Jessica Randall
-          <span class="account-address">London, United Kingdom</span>
-        </h1>
-        <p class="account-description">"Front-end developer and avidreader."</p>
+        <img
+          src="./assets/images/avatar-jessica.jpeg"
+          alt="Jessica Randall"
+          class="account-image"
+        />
+        <h1 class="account-name">Jessica Randall</h1>
+        <p class="account-address">London, United Kingdom</p>
+        <p class="account-description">
+          "Front-end developer and avid reader."
+        </p>
         <div class="social-list">
           <button class="social-link">GitHub</button>
           <button class="social-link">Frontend Mentor</button>
